# PixelAnalizer

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
config/: color_ranges.yaml
src/core/: analyzer.py  color_ranges.py  image_loader.py
src/ui/: app.py  image_panel.py  results_panel.py  toolbar.py
src/utils/: exporter.py  logger.py
tests/: test_analyzer.py  test_image_loader.py
